# prioity_foregrounds_kanban

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
priority_foregrounds/: __init__.py  rescore.py  server.py
tests/: test_rescore.py  test_server.py  test_ui_contract.py
web/: app.js  index.html  package.json  server.js  styles.css
