[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "priority-foregrounds-kanban"
version = "0.1.0"
description = "A bounded, evidence-oriented product priority workbench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "David Mar"}]
dependencies = []

[project.optional-dependencies]
ai = ["google-genai>=1.0"]

[project.scripts]
priority-foregrounds = "priority_foregrounds.server:main"

[tool.setuptools.packages.find]
include = ["priority_foregrounds*"]

[tool.setuptools.package-data]
priority_foregrounds = []

